[metadata]
name = transliterate
version = 0.0.1
description = Transliterate to/from Indian langauges
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/soodoku/transliterate

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

